dist_man1_MANS=

if BUILD_RESERVISTENCOIND
  dist_man1_MANS+=reservistencoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=reservistencoin-qt.1
endif

if BUILD_RESERVISTENCOIN_CLI
  dist_man1_MANS+=reservistencoin-cli.1
endif

if BUILD_RESERVISTENCOIN_TX
  dist_man1_MANS+=reservistencoin-tx.1
endif

if BUILD_RESERVISTENCOIN_UTIL
  dist_man1_MANS+=reservistencoin-util.1
endif

if ENABLE_WALLET
if BUILD_RESERVISTENCOIN_WALLET
  dist_man1_MANS+=reservistencoin-wallet.1
endif
endif
